# AgentFlow-AI

./: .env.example  .gitignore  README.md  package.json
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: router.py  routes_agents.py  routes_audit.py  routes_chat.py  routes_dashboard.py  routes_evals.py  routes_knowledge.py  routes_models.py  routes_project_diagnosis.py  routes_prompts.py  routes_system.py  routes_tools.py  routes_workflows.py
apps/api/app/core/: config.py  encoding.py  exceptions.py  rbac.py  security.py
apps/api/app/crud/: model_provider.py
apps/api/app/models/: domain.py
apps/api/app/schemas/: model_provider.py  workflow.py
apps/api/app/services/: agent_service.py  chunk_service.py  document_parser.py  embedding_service.py  eval_service.py  judge_service.py  knowledge_service.py  llm_service.py  observability_service.py  persistent_agent_service.py  persistent_eval_service.py  persistent_knowledge_service.py  persistent_observability_service.py  persistent_prompt_service.py  persistent_tool_audit_service.py  persistent_workflow_service.py  project_diagnosis_service.py  prompt_service.py  provider_adapter.py  rag_answer_service.py  rag_service.py  rerank_service.py  retrieval_service.py  text_cleaner.py  tool_audit_service.py  tool_service.py  vector_service.py  (+1 more)
apps/api/tests/: test_encoding.py  test_health.py  test_project_diagnosis.py  test_rag_quality.py  test_rbac_and_endpoints.py  test_tool_audit_service.py  test_tool_registry.py  test_vector_service.py  test_workflow_engine.py
(+99 files in other folders)
