[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentflow-api"
version = "0.1.0"
description = "FastAPI backend for AgentFlow-AI"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.1",
  "pydantic-settings>=2.3.4",
  "sqlalchemy>=2.0.31",
  "psycopg[binary]>=3.2.1",
  "redis>=5.0.7",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "cryptography>=42.0.8",
  "pypdf>=5.0.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
